--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 				</section>
 				<div class="week btn-warning sticky-top my-2 row" data-bs-toggle="collapse"
 				data-bs-target="#Week8">Week 8<i class="fa fa-arrow-circle-down" aria-hidden="true"></i></div>
-			<section id="Week8" class="<!--collapse-->">
+			<section id="Week8" class="collapse">
 				<!-- week 8 day 2 -->
 				<p>│<span class="line"></span>── Week 8 - Advanced JavaScript</p>
 				<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
@@ -509,9 +509,25 @@
 				<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week8/Day5/ExercisesXP/index.html" target="_blank">index.html</a></p>
 				<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week8/Day5/ExercisesXP/script.js" target="_blank">script.js</a></p>
 				<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week8/Day5/ExercisesXP/style.css" target="_blank">style.css</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold Mini-Project - Tic Tac Toe Game</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week8/Day5/ExercisesXPGold/index.html" target="_blank">index.html</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week8/Day5/ExercisesXPGold/style.css" target="_blank">style.css</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week8/Day5/ExercisesXPGold/script.js" target="_blank">script.js</a></p>
 				<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
 				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week8/Day5/DailyChallenge/script.js"target="_blank">script.js</a></p>
+			</section>
+			<div class="week btn-warning sticky-top my-2 row" data-bs-toggle="collapse"
+			data-bs-target="#Week9">Week 9<i class="fa fa-arrow-circle-down" aria-hidden="true"></i></div>
+		<section id="Week9" class="<!--collapse-->">
+				<!-- week 9 day 2 -->
+				<p>│<span class="line"></span>── Week 9 - HTTP, JSON, AJAX</p>
+				<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week9/Day2/ExercisesXP/index.html" target="_blank">index.html</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week9/Day2/ExercisesXP/script.js" target="_blank">script.js</a></p>
 				
+
+
 			</section>
 
 
