--- a/index.html
+++ b/index.html
@@ -525,7 +525,10 @@
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week9/Day2/ExercisesXP/index.html" target="_blank">index.html</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week9/Day2/ExercisesXP/script.js" target="_blank">script.js</a></p>
-				
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week9/Day2/ExercisesXPGold/index.html" target="_blank">index.html</a></p>
+				<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
+				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week9/Day2/DailyChallenge/index.html"target="_blank">script.js</a></p>
 
 
 			</section>
