--- a/index.html
+++ b/index.html
@@ -527,8 +527,13 @@
 				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week9/Day2/ExercisesXP/script.js" target="_blank">script.js</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week9/Day2/ExercisesXPGold/index.html" target="_blank">index.html</a></p>
-				<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
-				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week9/Day2/DailyChallenge/index.html"target="_blank">script.js</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week9/Day2/DailyChallenge/index.html"target="_blank">script.js</a></p>
+				<!-- week 9 day 4 -->
+				<p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP GET gif &#9757;</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week9/Day4/ExercisesXP/index.html" target="_blank">index.html</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week9/Day4/ExercisesXP/script.js" target="_blank">script.js</a></p>
 
 
 			</section>
