--- a/index.html
+++ b/index.html
@@ -543,7 +543,13 @@
 				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week9/Day4/DailyChallenge/index.html"target="_blank">index.html</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week9/Day4/DailyChallenge/script.js"target="_blank">script.js</a></p>
-				
+				<!-- week 9 day 5 -->
+				<p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p>		
+				<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>── Mini Project Weather App &#9757;</p>
+				<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week9/Day5/ExercisesXP/index.html" target="_blank">index.html</a></p>
+				<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
+				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week9/Day5/DailyChallenge/script.js"target="_blank">script.js</a></p>
+			
 
 			</section>
 
