--- a/index.html
+++ b/index.html
@@ -547,6 +547,7 @@
 				<p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p>		
 				<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>── Mini Project Weather App &#9757;</p>
 				<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week9/Day5/ExercisesXP/index.html" target="_blank">index.html</a></p>
+				<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week9/Day5/ExercisesXP/script.js" target="_blank">script.js</a></p>
 				<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
 				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week9/Day5/DailyChallenge/script.js"target="_blank">script.js</a></p>
 			
