--- a/index.html
+++ b/index.html
@@ -557,7 +557,11 @@
 				<!-- week 10 day 2 -->
 				<p>│<span class="line"></span>── Week 10 - HTTP, JSON, AJAX</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week9/Day2/ExercisesXP/script.js" target="_blank">script.js</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week10/Day2/ExercisesXP/script.js" target="_blank">script.js</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week10/Day2/ExercisesXPGold/script.js" target="_blank">script.js</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week10/Day2/DailyChallenge/script.js"target="_blank">script.js</a></p>
 
 			</section>
 
