--- a/index.html
+++ b/index.html
@@ -562,6 +562,10 @@
 				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week10/Day2/ExercisesXPGold/script.js" target="_blank">script.js</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week10/Day2/DailyChallenge/script.js"target="_blank">script.js</a></p>
+				<!-- week 10 day 4 -->
+				<p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week10/Day4/ExercisesXP/script.js" target="_blank">script.js</a></p>
 
 			</section>
 
