--- a/index.html
+++ b/index.html
@@ -573,7 +573,13 @@
 				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week10/Day4/DailyChallenge/index.html"target="_blank">index.html</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week10/Day4/DailyChallenge/script.js"target="_blank">script.js</a></p>
-
+				<!-- week 10 day 5 -->
+				<p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p>		
+				<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>── Mini Project Star Wars Web App Using AJAX API &#9757;</p>
+				<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week10/Day5/ExercisesXP/index.html" target="_blank">index.html</a></p>
+				<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week10/Day5/ExercisesXP/style.css" target="_blank">style.css</a></p>
+				<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week10/Day5/ExercisesXP/script.js" target="_blank">script.js</a></p>
+				
 			</section>
 
 
