--- a/index.html
+++ b/index.html
@@ -553,9 +553,10 @@
 			</section>
 			<div class="week btn-warning sticky-top my-2 row" data-bs-toggle="collapse"
 			data-bs-target="#Week10">Week 10<i class="fa fa-arrow-circle-down" aria-hidden="true"></i></div>
-		<section id="Week10" class="<!--collapse-->">
+		<section id="Week10" class="collapse">
 				<!-- week 10 day 2 -->
 				<p>│<span class="line"></span>── Week 10 - HTTP, JSON, AJAX</p>
+				<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week10/Day2/ExercisesXP/script.js" target="_blank">script.js</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p>
@@ -579,11 +580,21 @@
 				<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week10/Day5/ExercisesXP/index.html" target="_blank">index.html</a></p>
 				<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week10/Day5/ExercisesXP/style.css" target="_blank">style.css</a></p>
 				<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week10/Day5/ExercisesXP/script.js" target="_blank">script.js</a></p>
-				<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
+				<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge Currency rate&#9757;</p>
 				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week10/Day5/DailyChallenge/index.html"target="_blank">index.html</a></p>
 				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week10/Day5/DailyChallenge/script.js"target="_blank">script.js</a></p>
 				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week10/Day5/DailyChallenge/style.css"target="_blank">style.css</a></p>
-				
+			</section>
+			<div class="week btn-warning sticky-top my-2 row" data-bs-toggle="collapse"
+			data-bs-target="#Week11">Week 11<i class="fa fa-arrow-circle-down" aria-hidden="true"></i></div>
+		<section id="Week11" class="<!--collapse-->">
+				<!-- week 10 day 2 -->
+				<p>│<span class="line"></span>── Week 11 - Introduction to Databases</p>
+				<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week11/Day2/ExercisesXP/" target="_blank">files</a></p>
+
+
 			</section>
 
 
