--- a/index.html
+++ b/index.html
@@ -593,6 +593,8 @@
 				<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week11/Day2/ExercisesXP/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week11/Day2/DailyChallenge/"target="_blank">files</a></p>
 
 
 			</section>
