--- a/index.html
+++ b/index.html
@@ -599,7 +599,8 @@
 				<p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week11/Day4/ExercisesXP/" target="_blank">files</a></p>
-
+				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week11/Day4/DailyChallenge/"target="_blank">files</a></p>
 
 			</section>
 
