--- a/index.html
+++ b/index.html
@@ -601,6 +601,10 @@
 				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week11/Day4/ExercisesXP/" target="_blank">files</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week11/Day4/DailyChallenge/"target="_blank">files</a></p>
+				<!-- week 11 day 5 -->
+				<p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p>		
+				<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Exercises XP &#9757;</p>
+				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week11/Day5/ExercisesXP/" target="_blank">files</a></p>
 
 			</section>
 
