--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
 			</section>
 			<div class="week btn-warning sticky-top my-2 row" data-bs-toggle="collapse"
 			data-bs-target="#Week12">Week 12<i class="fa fa-arrow-circle-down" aria-hidden="true"></i></div>
-		<section id="Week12" class="<!--collapse-->">
+		<section id="Week12" class="collapse">
 				<!-- week 12 day 2 -->
 				<p>│<span class="line"></span>── Week 12 - Databases</p>
 				<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
@@ -626,7 +626,29 @@
 				<p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p>		
 				<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Mini Project - Special To Do List &#9757;</p>
 				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week12/Day5/ExercisesXP/index.html"target="_blank">index.html</a></p>
+			</section>
+			<div class="week btn-warning sticky-top my-2 row" data-bs-toggle="collapse"
+			data-bs-target="#Week13">Week 13<i class="fa fa-arrow-circle-down" aria-hidden="true"></i></div>
+		<section id="Week13" class="<!--collapse-->">
+				<!-- week 13 day 2 -->
+				<p>│<span class="line"></span>── Week 13 - Node.js</p>
+				<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week13/Day2/ExercisesXP/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week13/Day2/DailyChallenge/"target="_blank">files</a></p>
+				<!-- week 13 day 4 -->
+				<p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week13/Day4/ExercisesXP/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week13/Day4/DailyChallenge/"target="_blank">files</a></p>
+				<!-- week 13 day 5 -->
+				<p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p>		
+				<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Mini Project - Special To Do List &#9757;</p>
+				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week13/Day5/ExercisesXP/index.html"target="_blank">index.html</a></p>
 
+			
 			</section>
 
 
