--- a/index.html
+++ b/index.html
@@ -635,8 +635,13 @@
 				<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week13/Day2/ExercisesXP/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week13/Day2/ExercisesXPGold/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Ninja</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week13/Day2/ExercisesXPNinja/" target="_blank">files</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week13/Day2/DailyChallenge/"target="_blank">files</a></p>
+				
 				<!-- week 13 day 4 -->
 				<p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
@@ -644,7 +649,7 @@
 				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week13/Day4/DailyChallenge/"target="_blank">files</a></p>
 				<!-- week 13 day 5 -->
-				<p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p>		
+				<p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p>		dd 
 				<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Mini Project - Special To Do List &#9757;</p>
 				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week13/Day5/ExercisesXP/index.html"target="_blank">index.html</a></p>
 
