--- a/index.html
+++ b/index.html
@@ -645,8 +645,10 @@
 				<p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week13/Day4/ExercisesXP/" target="_blank">files</a></p>
-
-				
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week13/Day4/ExercisesXPGold/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Ninja</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week13/Day4/ExercisesXPNinja/" target="_blank">files</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week13/Day4/DailyChallenge/"target="_blank">files</a></p>
 				<!-- week 13 day 5 -->
