--- a/index.html
+++ b/index.html
@@ -652,9 +652,9 @@
 				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week13/Day4/DailyChallenge/"target="_blank">files</a></p>
 				<!-- week 13 day 5 -->
-				<p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p>		dd 
-				<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Mini Project - Special To Do List &#9757;</p>
-				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week13/Day5/ExercisesXP/index.html"target="_blank">index.html</a></p>
+				<p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p>
+				<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Mini-Project: A Shopping List &#9757;</p>
+				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week13/Day5/ExercisesXP/"target="_blank">files</a></p>
 
 			
 			</section>
