--- a/index.html
+++ b/index.html
@@ -655,6 +655,8 @@
 				<p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p>
 				<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Mini-Project: A Shopping List &#9757;</p>
 				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week13/Day5/ExercisesXP/"target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge Login & Register &#9757;</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week13/Day5/DailyChallenge/"target="_blank">files</a></p>
 
 			
 			</section>
