--- a/index.html
+++ b/index.html
@@ -668,26 +668,26 @@
 				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week14/Day2/ExercisesXP/" target="_blank">files</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week14/Day2/ExercisesXPGold/" target="_blank">files</a></p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Ninja</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week14/Day2/ExercisesXPNinja/" target="_blank">files</a></p>
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Ninja</p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week14/Day2/ExercisesXPNinja/" target="_blank">files</a></p> -->
 				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week14/Day2/DailyChallenge/"target="_blank">files</a></p>
 				<!-- week 14 day 4 -->
-				<p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week14/Day4/ExercisesXP/" target="_blank">files</a></p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week14/Day4/ExercisesXPGold/" target="_blank">files</a></p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Ninja</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week14/Day4/ExercisesXPNinja/" target="_blank">files</a></p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week14/Day4/DailyChallenge/"target="_blank">files</a></p>
+				<!-- <p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week14/Day4/ExercisesXP/" target="_blank">files</a></p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week14/Day4/ExercisesXPGold/" target="_blank">files</a></p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Ninja</p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week14/Day4/ExercisesXPNinja/" target="_blank">files</a></p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week14/Day4/DailyChallenge/"target="_blank">files</a></p> -->
 				<!-- week 14 day 5 -->
-				<p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p>
-				<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Mini-Project: A Shopping List &#9757;</p>
-				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week14/Day5/ExercisesXP/"target="_blank">files</a></p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge Login & Register &#9757;</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week14/Day5/DailyChallenge/"target="_blank">files</a></p>
+				<!-- <p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p> -->
+				<!-- <p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Mini-Project: A Shopping List &#9757;</p> -->
+				<!-- <p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week14/Day5/ExercisesXP/"target="_blank">files</a></p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge Login & Register &#9757;</p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week14/Day5/DailyChallenge/"target="_blank">files</a></p> -->
 			
 			</section>
 
