--- a/index.html
+++ b/index.html
@@ -666,12 +666,16 @@
 				<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week14/Day2/ExercisesXP/" target="_blank">files</a></p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week14/Day2/ExercisesXPGold/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Mini-Project - RSS Facts Feed - EJS</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week14/Day3/" target="_blank">files</a></p>
 				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Ninja</p> -->
 				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week14/Day2/ExercisesXPNinja/" target="_blank">files</a></p> -->
 				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week14/Day2/DailyChallenge/"target="_blank">files</a></p>
+				<!-- week 14 day 3 -->
+				<p>│&emsp;&emsp;│<span class="line"></span>── Day 3</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week14/Day2/ExercisesXP/" target="_blank">files</a></p>
 				<!-- week 14 day 4 -->
 				<!-- <p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p> -->
 				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p> -->
