--- a/index.html
+++ b/index.html
@@ -691,16 +691,16 @@
 				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week15/Day2/exercises_xp_ninja/" target="_blank">files</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week15/Day2/daily_challenge/"target="_blank">files</a></p>
-				<!-- week 15 day 4 -->
-				<!-- <p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p> -->
-				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p> -->
-				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week15/Day4/ExercisesXP/" target="_blank">files</a></p> -->
-				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p> -->
-				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week15/Day4/ExercisesXPGold/" target="_blank">files</a></p> -->
-				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Ninja</p> -->
-				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week15/Day4/ExercisesXPNinja/" target="_blank">files</a></p> -->
-				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p> -->
-				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week15/Day4/DailyChallenge/"target="_blank">files</a></p> -->
+				week 15 day 4
+				<p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week15/Day4/exercises_xp/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week15/Day4/exercises_xp_gold/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Ninja</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week15/Day4/exercises_xp_ninja/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week15/Day4/daily_challenge/"target="_blank">files</a></p>
 				<!-- week 15 day 5 -->
 				<!-- <p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p> -->
 				<!-- <p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Mini-Project: A Shopping List &#9757;</p> -->
