--- a/index.html
+++ b/index.html
@@ -592,19 +592,19 @@
 				<p>│<span class="line"></span>── Week 11 - Databases</p>
 				<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week11/Day2/ExercisesXP/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week11/Day2/ExercisesXP/" target="_blank">files</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week11/Day2/DailyChallenge/"target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week11/Day2/DailyChallenge/"target="_blank">files</a></p>
 				<!-- week 11 day 4 -->
 				<p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week11/Day4/ExercisesXP/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week11/Day4/ExercisesXP/" target="_blank">files</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week11/Day4/DailyChallenge/"target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week11/Day4/DailyChallenge/"target="_blank">files</a></p>
 				<!-- week 11 day 5 -->
 				<p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p>		
 				<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Exercises XP &#9757;</p>
-				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week11/Day5/ExercisesXP/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week11/Day5/ExercisesXP/" target="_blank">files</a></p>
 			</section>
 			<div class="week btn-warning sticky-top my-2 row" data-bs-toggle="collapse"
 			data-bs-target="#Week12">Week 12<i class="fa fa-arrow-circle-down" aria-hidden="true"></i></div>
@@ -613,15 +613,15 @@
 				<p>│<span class="line"></span>── Week 12 - Databases</p>
 				<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week12/Day2/ExercisesXP/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week12/Day2/ExercisesXP/" target="_blank">files</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week12/Day2/DailyChallenge/"target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week12/Day2/DailyChallenge/"target="_blank">files</a></p>
 				<!-- week 12 day 4 -->
 				<p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week12/Day4/ExercisesXP/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week12/Day4/ExercisesXP/" target="_blank">files</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week12/Day4/DailyChallenge/"target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week12/Day4/DailyChallenge/"target="_blank">files</a></p>
 				<!-- week 12 day 5 -->
 				<p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p>		
 				<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Mini Project - Special To Do List &#9757;</p>
@@ -634,29 +634,29 @@
 				<p>│<span class="line"></span>── Week 13 - Node.js</p>
 				<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week13/Day2/ExercisesXP/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week13/Day2/ExercisesXP/" target="_blank">files</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week13/Day2/ExercisesXPGold/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week13/Day2/ExercisesXPGold/" target="_blank">files</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Ninja</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week13/Day2/ExercisesXPNinja/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week13/Day2/ExercisesXPNinja/" target="_blank">files</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week13/Day2/DailyChallenge/"target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week13/Day2/DailyChallenge/"target="_blank">files</a></p>
 				<!-- week 13 day 4 -->
 				<p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week13/Day4/ExercisesXP/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week13/Day4/ExercisesXP/" target="_blank">files</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week13/Day4/ExercisesXPGold/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week13/Day4/ExercisesXPGold/" target="_blank">files</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Ninja</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week13/Day4/ExercisesXPNinja/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week13/Day4/ExercisesXPNinja/" target="_blank">files</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week13/Day4/DailyChallenge/"target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week13/Day4/DailyChallenge/"target="_blank">files</a></p>
 				<!-- week 13 day 5 -->
 				<p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p>
 				<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>──Mini-Project: A Shopping List &#9757;</p>
-				<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;&emsp;└─	<a href="Week13/Day5/ExercisesXP/"target="_blank">files</a></p>
+				<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week13/Day5/ExercisesXP/"target="_blank">files</a></p>
 				<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge Login & Register &#9757;</p>
-				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week13/Day5/DailyChallenge/"target="_blank">files</a></p>
+				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week13/Day5/DailyChallenge/"target="_blank">files</a></p>
 			</section>
 			<div class="week btn-warning sticky-top my-2 row" data-bs-toggle="collapse"
 			data-bs-target="#Week14">Week 14<i class="fa fa-arrow-circle-down" aria-hidden="true"></i></div>
@@ -665,17 +665,17 @@
 				<p>│<span class="line"></span>── Week 14 - Node.js</p>
 				<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week14/Day2/ExercisesXP/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week14/Day2/ExercisesXP/" target="_blank">files</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Mini-Project - RSS Facts Feed - EJS</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week14/Day3/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week15/Day3/" target="_blank">files</a></p>
 				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Ninja</p> -->
-				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week14/Day2/ExercisesXPNinja/" target="_blank">files</a></p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week14/Day2/ExercisesXPNinja/" target="_blank">files</a></p> -->
 				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week14/Day2/DailyChallenge/"target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week14/Day2/DailyChallenge/"target="_blank">files</a></p>
 				<!-- week 14 day 3 -->
 				<p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 3</p>
 				<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Exercises XP &#9757;</p>
-				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─ <a href="Week14/Day2/ExercisesXP/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week14/Day2/ExercisesXP/" target="_blank">files</a></p>
 			</section>
 			<div class="week btn-warning sticky-top my-2 row" data-bs-toggle="collapse"
 			data-bs-target="#Week15">Week 15<i class="fa fa-arrow-circle-down" aria-hidden="true"></i></div>
@@ -684,29 +684,29 @@
 				<p>│<span class="line"></span>── Week 15 - React</p>
 				<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week15/Day2/ExercisesXP/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week15/Day2/ExercisesXP/" target="_blank">files</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week15/Day2/exercises_xp_gold" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week15/Day2/exercises_xp_gold" target="_blank">files</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Mini Project: Landing Page Using React</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week15/Day2/exercises_xp_ninja/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week15/Day2/exercises_xp_ninja/" target="_blank">files</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week15/Day2/daily_challenge/"target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week15/Day2/daily_challenge/"target="_blank">files</a></p>
 				<!-- week 15 day 4 -->
 				<p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week15/Day4/exercises_xp/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week15/Day4/exercises_xp/" target="_blank">files</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week15/Day4/exercises_xp_gold/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week15/Day4/exercises_xp_gold/" target="_blank">files</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Ninja</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week15/Day4/exercises_xp_ninja/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week15/Day4/exercises_xp_ninja/" target="_blank">files</a></p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week15/Day4/daily_challenge/"target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week15/Day4/daily_challenge/"target="_blank">files</a></p>
 				<!-- week 15 day 5 -->
 				<p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p>
-				<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Mini-Project: Random Quote Generator &#9757;</p>
-				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week15/Day5/exercises_xp/"target="_blank">files</a></p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge Calculator &#9757;</p>
-				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week15/Day5/daily_challenge"target="_blank">files</a></p>
+				<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>──Mini-Project: Random Quote Generator &#9757;</p>
+				<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week15/Day5/exercises_xp/"target="_blank">files</a></p>
+				<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge Calculator &#9757;</p>
+				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week15/Day5/daily_challenge"target="_blank">files</a></p>
 			
 			</section>
 
