--- a/index.html
+++ b/index.html
@@ -724,13 +724,13 @@
 				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week16/Day2/daily_challenge/"target="_blank">files</a></p>
 				<!-- week 16 day 4 -->
-				<!-- <p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p> -->
-				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p> -->
-				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week15/Day4/exercises_xp/" target="_blank">files</a></p> -->
-				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p> -->
-				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week15/Day4/exercises_xp_gold/" target="_blank">files</a></p> -->
-				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Ninja</p> -->
-				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week15/Day4/exercises_xp_ninja/" target="_blank">files</a></p> -->
+				<p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week16/Day4/exercises_xp/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week16/Day4/exercises_xp_gold/" target="_blank">files</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Ninja</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week16/Day4/exercises_xp_ninja/" target="_blank">files</a></p>
 				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p> -->
 				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week15/Day4/daily_challenge/"target="_blank">files</a></p> -->
 				<!-- week 16 day 5 -->
