--- a/index.html
+++ b/index.html
@@ -734,9 +734,9 @@
 				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p> -->
 				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week15/Day4/daily_challenge/"target="_blank">files</a></p> -->
 				<!-- week 16 day 5 -->
-				<!-- <p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p> -->
-				<!-- <p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>──Mini-Project: Random Quote Generator &#9757;</p> -->
-				<!-- <p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week15/Day5/exercises_xp/"target="_blank">files</a></p> -->
+				<p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p>
+				<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>──Mini-Project: To Do List &#9757;</p>
+				<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week16/Day5/exercises_xp/"target="_blank">files</a></p>
 				<!-- <p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge Calculator &#9757;</p> -->
 				<!-- <p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week15/Day5/daily_challenge"target="_blank">files</a></p> -->
 			
