--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
 			</section>
 			<div class="week btn-warning sticky-top my-2 row" data-bs-toggle="collapse"
 			data-bs-target="#Week16">Week 16<i class="fa fa-arrow-circle-down" aria-hidden="true"></i></div>
-		<section id="Week16" class="<!--collapse-->">
+		<section id="Week16" class="collapse">
 				<!-- week 16 day 2 -->
 				<p>│<span class="line"></span>── Week 16 - React</p>
 				<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
@@ -739,6 +739,38 @@
 				<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week16/Day5/exercises_xp/"target="_blank">files</a></p>
 				<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge Memory Game &#9757;</p>
 				<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week16/Day5/daily_challenge"target="_blank">files</a></p>
+			
+			</section>
+			<div class="week btn-warning sticky-top my-2 row" data-bs-toggle="collapse"
+			data-bs-target="#Week17">Week 17<i class="fa fa-arrow-circle-down" aria-hidden="true"></i></div>
+		<section id="Week17" class="<!--collapse-->">
+				<!-- week 17 day 2 -->
+				<p>│<span class="line"></span>── Week 17 - Redux</p>
+				<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week17/Day2/exercises_xp/" target="_blank">files</a></p>
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week17/Day2/exercises_xp_gold" target="_blank">files</a></p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Mini Project: Landing Page Using React</p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week17/Day2/exercises_xp_ninja/" target="_blank">files</a></p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week17/Day2/daily_challenge/"target="_blank">files</a></p> -->
+				<!-- week 17 day 4 -->
+				<!-- <p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week17/Day4/exercises_xp/" target="_blank">files</a></p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week17/Day4/exercises_xp_gold/" target="_blank">files</a></p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Ninja</p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week17/Day4/exercises_xp_ninja/" target="_blank">files</a></p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p> -->
+				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week17/Day4/daily_challenge/"target="_blank">files</a></p> -->
+				<!-- week 17 day 5 -->
+				<!-- <p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p> -->
+				<!-- <p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>──Mini-Project: To Do List &#9757;</p> -->
+				<!-- <p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week17/Day5/exercises_xp/"target="_blank">files</a></p> -->
+				<!-- <p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge Memory Game &#9757;</p> -->
+				<!-- <p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week17/Day5/daily_challenge"target="_blank">files</a></p> -->
 			
 			</section>
 
