--- a/index.html
+++ b/index.html
@@ -763,12 +763,12 @@
 				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week17/Day4/exercises_xp_gold/" target="_blank">files</a></p> -->
 				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Ninja</p> -->
 				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week17/Day4/exercises_xp_ninja/" target="_blank">files</a></p> -->
-				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p> -->
-				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week17/Day4/daily_challenge/"target="_blank">files</a></p> -->
+				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week17/Day4/daily_challenge/"target="_blank">files</a></p>
 				<!-- week 17 day 5 -->
-				<!-- <p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p> -->
-				<!-- <p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>──Mini-Project: To Do List &#9757;</p> -->
-				<!-- <p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week17/Day5/exercises_xp/"target="_blank">files</a></p> -->
+				<p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p>
+				<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>──Mini-Project: Snap Shot &#9757;</p>
+				<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week17/Day5/exercises_xp/"target="_blank">files</a></p>
 				<!-- <p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge Memory Game &#9757;</p> -->
 				<!-- <p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week17/Day5/daily_challenge"target="_blank">files</a></p> -->
 			
