--- a/index.html
+++ b/index.html
@@ -781,8 +781,8 @@
 				<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week18/Day2/exercises_xp/" target="_blank">files</a></p>
-				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p> -->
-				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week18/Day2/exercises_xp_gold" target="_blank">files</a></p> -->
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week18/Day2/exercises_xp_gold" target="_blank">files</a></p>
 				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Mini Project: Landing Page Using React</p> -->
 				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week18/Day2/exercises_xp_ninja/" target="_blank">files</a></p> -->
 				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p> -->
