--- a/index.html
+++ b/index.html
@@ -798,9 +798,9 @@
 				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p> -->
 				<!-- <p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week18/Day4/daily_challenge/"target="_blank">files</a></p> -->
 				<!-- week 18 day 5 -->
-				<!-- <p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p> -->
-				<!-- <p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>──Mini-Project: Snap Shot &#9757;</p> -->
-				<!-- <p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week18/Day5/exercises_xp/"target="_blank">files</a></p> -->
+				<p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p>
+				<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>──Mini-Project: Redux Blog &#9757;</p>
+				<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week18/Day5/exercises_xp/"target="_blank">files</a></p>
 				<!-- <p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge Components &#9757;</p> -->
 				<!-- <p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="https://github.com/Chikitonik/DI_Bootcamp/tree/master/Week18/Day5/daily_challenge"target="_blank">files</a></p> -->
 			
